      * Made sure that if keep_install_file = FALSE then wait= TRUE (since otherwise, we'll erase the file before we get to run it)
      * output now returns TRUE/FLASE on whether the installation worked or not.
   * install.?? - now returns TRUE/FLASE on whether to installation worked or not.
   * updateR - 
      * added setInternet2(TRUE) for when updating packages (to help it work with specification of proxies, etc.). (this seems to be safe for regular users - but I hope it won't cause new problems.).  Thanks to a bug report by Gilbert Pétain-Coup.
      * now checks if R was installed or not (Based on the output of install.R), and removed the need to ask the user that.

BUG FIXES:
   * Fixed a bug in updateR, to make sure it will be able to open the new Rgui, and also close the old R.
   * Fixed a bug in updateR, "Error in !install_R : 'install_R' is missing" (install_R was called in too early) (thanks to AC for the bug report!)


installR 0.8
------------

FIXES FOR CRAN SUBMISSION:
   * Fixed some spelling mistakes in DESCRIPTION,
   * Made sure to run the checks in the latest R version (R 2.15.3, oh the irony)
   * Changed update.R to be called updateR (in order to avoid confusing it as an S3 variation to 'update')


My thanks goes to Prof Brian Ripley for his help.


installR 0.7
--------------

NEW FUNCTIONS ADDED:
   * ask.user.yn.question - Asks the user for one yes/no question.

UPDATED FUNCTIONS:
   * update.R  - fixed a bug in quit_R, and added an option to open the Rgui of the new R. Started using ask.user.yn.question in the function (to make it more readable).
   * fixed some parameters not defined in the function.
   * made install.MikTeX more friendly in case a wrong version number is specified.

OTHER NOTES:
   * More documentation.  Updated README.md (fixed \link vs \url)
   * More documentation.  Updated README.md


installR 0.6
------------

NEW FUNCTIONS ADDED:
   * get.installed.R.folders - Returns folder names with R installations